objects/ssot__CareDeterminant__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareDeterminantPriority__c</fullName>
        <label>Care Determinant Priority</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareDeterminantType__c</fullName>
        <label>Care Determinant Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Determinant Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Is Active</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientId__c</fullName>
        <label>Patient</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SurveyResponseId__c</fullName>
        <label>Survey Response</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716666647171_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareDeterminant_PatientId_map_Patien_rel</label>
        <referenceTo>ssot__Patient__dlm</referenceTo>
        <relationshipLabel>CareDeterminant_PatientId_map_Patien_rel</relationshipLabel>
        <relationshipName>rel_1716666647171_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1721371373851_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareDeterminant_AccountId_map_Accoun_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CareDeterminant_AccountId_map_Accoun_rel</relationshipLabel>
        <relationshipName>rel_1721371373851_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>